# daphne

./: CMakeLists.txt  build.sh  output.txt
io/: Test.tdms  adam  adam.cpp  c  c.cpp  create_frame.py  exampleMeasurements.tdms:Zone.Identifier  output.txt  read.daphne  read1.daphne  readTdmsFrame1.tdms  tdms.py  tdmsreader.cpp  test  test.cpp  test.daphne  test2  test2.cpp  test2.tdms  write.daphne  write_formats.py  write_groups.py  write_tdms.py
io/TDMSpp-master/: CMakeCache.txt  Makefile  cmake_install.cmake
io/TDMSpp-master/src/: Makefile  cmake_install.cmake
io/TDMSpp-master/tests/: Makefile  cmake_install.cmake  tdmsppinfo
io/adam_folder/: tdms.cpp
io/libtdms-gpl-0.7/tdmsreader/: main.cpp  tdmsreader
io/tdmsTests/: 10channels.tdms  10groups10channels.tdms  1channel.tdms  2channels.tdms  2groups.tdms  uint8.tdms  write1channel.tdms
io/tdmsreader-master/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h
io/tdmsreader-master/src/: Makefile  cmake_install.cmake
io/tdmsreader-master/src/test/: CMakeLists.txt  Makefile  cmake_install.cmake
io/tdmsreader-master/src/types/: Makefile  cmake_install.cmake
io/tdmsreader-master/src/types/test/: Makefile  cmake_install.cmake
io/tdmswriter/: CMakeLists.txt
io/tdmswriter/cmake/: tdmsWriterConfig.cmake.in  tdms_writerConfig.cmake.in
io/tdmswriter/include/: TDMS.h  TDMS_config.h
io/testing/: 10channelsFrameMixed.tdms  10channelsFrameMixedWritten.tdms  10channelsFrameSingle.tdms  10channelsMatrixDouble.tdms  10channelsMatrixInt.tdms  1channelsMatrixDouble.tdms  1channelsMatrixInt.tdms  readFrame.daphne  readMatrix.daphne  readwrittenFrame.daphne  test.sh  writeFrame.daphne  write_test_tdms_frame.py  write_test_tdms_matrix.py
src/runtime/distributed/worker/: CMakeLists.txt
src/runtime/local/io/: CMakeLists.txt  ReadTdms.h  WriteTdms.h  utils.cpp
src/runtime/local/kernels/: CMakeLists.txt  Read.h  Write.h
test/: CMakeLists.txt
test/api/cli/io/: ReadTest.cpp  WriteTest.cpp  frame_tdms_ref.txt  matrix_tdms_ref.txt  readFrame.daphne  readTdmsFrame.daphne  readTdmsMatrix.daphne  testReadFrameTdms.txt  testReadMatrixTdms.txt  testReadTdmsFrame.daphne  testReadTdmsMatrix.daphne  writeMatrix_tdms.daphne
test/runtime/local/io/: ReadTdms.tdms  ReadTdmsTest.cpp  readTdmsFrame2.tdms
test/runtime/local/kernels/: ReadTest.cpp
